--- a/app/src/main/res/layout/activity_create__a__gig.xml
+++ b/app/src/main/res/layout/activity_create__a__gig.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,21 +22,21 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/creategigtextup1"
+                android:id="@+id/lbl_header"
                 android:text="@string/welcome"
                 android:textSize="32sp"
-                android:textColor="#000000"
+                android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
 
 
             <TextView
-                android:layout_below="@+id/creategigtextup2"
+                android:layout_below="@+id/lbl_sub_header"
                 android:text="@string/createyourgig"
                 android:layout_marginTop="38dp"
                 android:textSize="24sp"
-                android:textColor="#000000"
+                android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:ignore="UnknownId">
@@ -56,8 +56,9 @@
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             app:cardCornerRadius="32dp"
+            android:layout_marginBottom="20dp"
             app:cardElevation="60dp"
-            android:background="@color/cardview_light_background">
+            app:cardBackgroundColor="@color/cardview_light_background">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -65,12 +66,14 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    app:civ_border_color="@color/card1"
+                    app:civ_border_width="1dp"
                     android:src="@drawable/freelancer"
-                    android:id="@+id/insertgigimage">
-                </ImageView>
+                    android:id="@+id/img_cover">
+                </de.hdodenhof.circleimageview.CircleImageView>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,19 +86,35 @@
                 </TextView>
 
 
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:text="@string/topicfirstin_viewgigforuser"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_title"
+                    android:id="@+id/txt_title"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:hint="@string/gigtitle"
                     android:inputType="text"
                     android:textSize="20dp"
                     android:paddingLeft="10dp"
-                    android:layout_marginTop="25dp"
+
                     android:background="@drawable/custom_input"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/topic2"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_category"
+                    android:id="@+id/txt_category"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:hint="@string/gigcategory"
@@ -104,8 +123,16 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/custom_input"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/topic3"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_des"
+                    android:id="@+id/txt_description"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
                     android:hint="@string/gigdes"
@@ -114,8 +141,16 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/custom_input" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/topic4"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_delinfo"
+                    android:id="@+id/txt_delivery_info"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
                     android:hint="@string/deliveryinfo"
@@ -124,30 +159,69 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/custom_input" />
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_pricinginfo"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:hint="@string/pricinginfo"
-                    android:inputType="text"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/advance_amount_topic"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_advance"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="@string/advance_amount"
+                    android:inputType="numberDecimal"
                     android:textSize="20dp"
                     android:paddingLeft="10dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/custom_input" />
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/creategig_contactinfo"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/second_amount"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_second_amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="@string/second_amount"
+                    android:inputType="numberDecimal"
+                    android:textSize="20dp"
+                    android:paddingLeft="10dp"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/custom_input" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/contact"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_contact"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:hint="@string/condetails"
-                    android:inputType="text"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:textSize="20dp"
                     android:paddingLeft="10dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/custom_input" />
                 <Button
-                    android:id="@+id/savegigdetailsbutton"
-                    android:layout_width="90dp"
-                    android:layout_height="60dp"
+                    android:background="@drawable/custom_button"
+                    android:id="@+id/btn_save"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="@string/addthisgig">
 
                 </Button>
@@ -163,4 +237,4 @@
     </LinearLayout>
 
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
