--- a/app/src/main/res/layout/activity_update_order.xml
+++ b/app/src/main/res/layout/activity_update_order.xml
@@ -231,7 +231,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
-            android:text="Submit Order"
+            android:text="Update Order"
             android:textColor="@color/colorWhite"
             />
 
