--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -128,21 +128,12 @@
                 android:layout_marginTop="20dp"/>
 
             <Button
+                android:id="@+id/createAccountPage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Create Account"
                 android:background="#00000000"
-                android:onClick="postRequestUserView"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="becomeseller"
-                android:id="@+id/temporybtn"
-                android:background="#00000000"
-
                 android:layout_gravity="center"/>
 
 
