--- a/app/src/main/res/layout/activity_orders__to_be_rec__home.xml
+++ b/app/src/main/res/layout/activity_orders__to_be_rec__home.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrdersToBeRecHome">
+    tools:context=".OrdersToBeRecHome"
+    android:padding="10dp"
+    android:background="@drawable/orderstorecback">
 
 
     <LinearLayout
@@ -25,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/muli_black"
-            android:text="Orders To Received"
+            android:text="Orders To Be Received"
             android:textAllCaps="true"
             android:textColor="@color/colorAccent"
             android:textSize="30sp" />
@@ -43,7 +45,7 @@
 
 
     <LinearLayout
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="150dp"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -85,7 +87,7 @@
 
     <LinearLayout
         android:layout_alignParentRight="true"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="150dp"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -108,7 +110,7 @@
                     android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="COMPLETED ORDERS"/>
+                    android:text="RECEIVED ORDERS"/>
 
                 <TextView
                     android:id="@+id/OrdersToBeRecCompletedCount"
